[package]
name = "revm-fork-db"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "6f8ebb45afca1a201a11d421ec46db0f7a1d8d08" }
anyhow = "1"
revm = "7"
serde = "1"
serde_json = "1"
tracing = "0"
ureq = { version = "2", features = ["json", "gzip"], default-features = false }

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls"]
rustls = ["ureq/tls"]
