[package]
name = "revm-fork-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
revm = { version = "7", features = ["serde"] }
serde = "1"
serde_json = "1"
tracing = "0"
ureq = { version = "2", features = ["json", "gzip"], default-features = false }

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls"]
rustls = ["ureq/tls"]
