[package]
name = "revm-fork-db"
version = "8.1.1"
edition = "2021"
license = "MIT"
description = "A lightweight fork database implementation for revm"
authors = ["Tony Ke <tonykebot@outlook.com>"]
keywords = ["database", "fork", "revm"]
repository = "https://github.com/fuzzland/revm-fork-db"
readme = "./README.md"

[dependencies]
eyre = "0.6"
# revm = { version = "8", features = ["serde"] }
revm = { git = "https://github.com/fuzzland/dit-revm.git", rev = "e4a8e58", features = [
    "serde",
] }
serde = "1"
serde_json = "1"
tracing = "0"
ureq = { version = "2", features = ["json", "gzip"], default-features = false }

[features]
default = ["native-tls"]
native-tls = ["ureq/native-tls"]
rustls = ["ureq/tls"]
